resolved alert spacing issue. Image button styled.

--- a/app/assets/stylesheets/errors.scss
+++ b/app/assets/stylesheets/errors.scss
@@ -22,3 +22,6 @@ div#error_explanation > h3 {
   color: white;
 }
 
+p.alert {
+  margin-bottom: 0;
+}
